add swagger doc for /admins/products
